<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Keep Alive</string>

    <string name="main_welcome">Keep Alive</string>
    <string name="main_join">开始</string>
    <string name="main_text_error">起个名字！</string>

    <string name="heartbean_step">把食指放到摄像头上眼睛盯着屏幕深呼吸。</string>

    <string name="action_show_users">打印在线用户</string>
    <string name="action_trigger_push">触发一次离线消息推送</string>
    <string name="action_logout">登出</string>
    
    <string name="action_kick">踢光所有人，独霸聊天室</string>
    <string name="action_invite">招呼点客人</string>

    <string name="confirm_exit">确定退出吗</string>

    <string name="session_opened">你登录了，屋里现在算上你有%d人</string>
    <string name="session_paused">网络断了，稍安勿燥</string>
    <string name="session_resumed">网连上了，继续吧</string>
    <string name="joined_notif">%s 来了</string>
    <string name="left_notif">%s 走了</string>

    <string name="notif_title">有新消息</string>
    <string name="notif_group">聊天组有一个新消息</string>

    <string name="toast_login">登录中</string>
    <string name="main_join_group">加入聊天室</string>
    <string name="online_users">在线用户</string>
    <string name="available_group">聊天组</string>
    
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="text_register">注册账号</string>
</resources>
