<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="50dp" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_welcome"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/chat_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/chat_passowrd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_join" />

        <ProgressBar
            android:id="@+id/chat_loading"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:indeterminate="true"
            android:visibility="gone" />
    </FrameLayout>

    <TextView
        android:id="@+id/chat_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:padding="10dp"
        android:text="@string/text_register"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#099"
        android:textSize="14sp" />

</LinearLayout>