<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="50dp" >

    <EditText
        android:id="@+id/register_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/register_passowrd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textVisiblePassword" />

    <EditText
        android:id="@+id/register_confirm_passowrd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/hint_confirm_password"
        android:inputType="textVisiblePassword" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/register_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_join" />

        <ProgressBar
            android:id="@+id/register_loading"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:indeterminate="true"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>